# opendata-customers

./: .gitignore  pyproject.toml
app/: main.py
app/v1/model/: account_model.py  cdr_model.py  invoice_model.py  payments_model.py  tarifa_model.py  user_model.py
app/v1/router/: account_router.py  cdr_router.py  invoice_router.py  payment_router.py  tarifa_router.py
app/v1/schema/: accounts_schema.py  cdr_schema.py  invoice_schema.py  payment_schema.py  tarifa_schema.py  user_schema.py
app/v1/scripts/: create_tables.py
app/v1/service/: account_service.py  auth_service.py  cdr_service.py  invoice_service.py  payment_service.py  tarifa_service.py  user_service.py
app/v1/utils/: db.py  settings.py
tests/: conftest.py  test_user.py
