[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["fernando <fenavillarroel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
peewee = "^3.15.4"
pydantic = {extras = ["email"], version = "^1.10.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
